base: Global Actions with Advanced Reboot [1/2]
With fixes from:

Do not show reboot dialog in lock screen
-Adin Kwok <adin.kwok@carbonrom.org>

Dismiss dialog on screen off
-Adin Kwok <adin.kwok@carbonrom.org>

Vectorized the power menu sound panel selector
-David Wilson <daveyannihilation@hotmail.com

Fix silent mode icons in new power menu
Fix airplane mode in new power menu
-camcory <camcory1@gmail.com>

Pimp out power menu
-Alex Cruz <mazdarider23@gmail.com>

Powermenu Torch option
-LorDClockaN <davor@losinj.com>

Add Screen Record to the Power Menu
-eyosen <abittin@gmail.com>

Power menu customizations [1/2]
-Dave Kessler <activethrasher00@gmail.com>

Replace restart to bootloader/recovery/system vectors.
-Andrew Fluck <andrew@aospa.co>

[anayw2001 edits: bring up to 11]

[ghostrider-reborn edits]
- bring up to 12, 13
- remove emergency button from reboot menu
- use original restart icon in main menu
- minor code cleanup

Change-Id: I6978be623b0ec7ca9e702fc311449c36b504b1a6
Signed-off-by: Adithya <gh0strider.2k18.reborn@gmail.com>

--- a/packages/SystemUI/res/values/awaken_strings.xml
+++ b/packages/SystemUI/res/values/awaken_strings.xml
@@ -76,6 +76,14 @@
     <string name="quick_settings_monotoggle_tile_mono">Mono audio</string>
     <string name="quick_settings_monotoggle_tile_stereo">Stereo audio</string>
 
+    <!-- Power Menu -->
+    <string name="global_action_reboot">Restart</string>
+    <string name="global_action_reboot_more">Restart\u2026</string>
+    <string name="global_action_reboot_sub">System</string>
+    <string name="global_action_reboot_recovery">Recovery</string>
+    <string name="global_action_reboot_bootloader">Bootloader</string>
+    <string name="global_action_settings">Settings</string>
+
     <!-- Screenshot QS tile -->
     <string name="quick_settings_screenshot_label">Screenshot</string>
     <string name="quick_settings_full_screenshot_label">Full</string>
