--- a/core/res/res/values/awaken_symbols.xml
+++ b/core/res/res/values/awaken_symbols.xml
@@ -34,4 +34,13 @@
     <java-symbol type="bool" name="config_proximityCheckOnWake" />
     <java-symbol type="integer" name="config_proximityCheckTimeout" />
     <java-symbol type="bool" name="config_proximityCheckOnWakeEnabledByDefault" />
+
+    <!-- Power Menu Reboot -->
+    <java-symbol name="reboot_to_bootloader_title" type="string" />
+    <java-symbol name="reboot_to_bootloader_message" type="string" />
+    <java-symbol name="reboot_to_recovery_title" type="string" />
+    <java-symbol name="reboot_to_recovery_message" type="string" />
+    <java-symbol name="reboot_system_title" type="string" />
+    <java-symbol name="reboot_system_message" type="string" />
+    <java-symbol type="array" name="config_rebootActionsList" />
 </resources>
