SystemUI: FPS Info Overlay & Tile
Change-Id: I8281f43fb135875455f92fd2347e2da92bee3ce8
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

* @jhonboy121:
  * made the fps info tile non persistent and nuked BootReceiver
  * removed unused ContentObserver and empty method overrides
  * cleaned up imports

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I0486f297c685b59eba5358a7e8013e63a944e09f

-----

SystemUI: rewrite FPSInfoService in kt from scratch

* Basically the old one was total bs
* We now make use of coroutines for periodically reading fps
* Added support for controlling fps read interval via overlay
* Make sure tile is not available if fps info node is not accessible
* Also keep the overlay below statusbar inset

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I3548a0d1dea22927e2d7773806b4483c1397c744

-----

SystemUI: rewrite fps info tile in kt and bind service to the tile

* Binding the service makes sure that it won't live outside the lifecycle of the qs tile
* Also improved reading of fps info from the sysfs node by keeping a preloaded regex which
  finds only the first N set of integers, this way we don't have to check how the string is
  formatted, nor convert the string to a float and then round to an int.

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

-----

SystemUI: FPSInfoService: initialize fpsInfoView without posting in handler

* Apparently restarting sysui caused it to crash because fpsInfoView wasn't initialized when configuration change callback was fired

Co-authored-by: SuperDroidBond <superdroidbond@yahoo.com>
Co-authored-by: SKULSHADY <anushekprasal@gmail.com>
Co-authored-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I694d87f2484fadbe4d4a195548dc9c7706ac72c3

--- a/packages/SystemUI/res/values/awaken_config.xml
+++ b/packages/SystemUI/res/values/awaken_config.xml
@@ -32,4 +32,10 @@
 
     <!-- The CPUs to display in CPUInfoService view -->
     <string name="config_displayCpus" translatable="false"></string>
+
+    <!-- FPSInfoService FPS node file path -->
+    <string name="config_fpsInfoSysNode" translatable="false"></string>
+
+    <!-- FPS measure interval in milliseconds, default 1000 -->
+    <integer name="config_fpsReadInterval">1000</integer>
 </resources>
