base: Allow changing face unlock method when locked [1/2]
Change-Id: I9a8e812bbe869dead94d631fa0a2f53f3bf67cc6

--- a/core/res/res/values/awaken_symbols.xml
+++ b/core/res/res/values/awaken_symbols.xml
@@ -36,6 +36,9 @@
     <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
     <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
 
+    <!-- Enable face auth only when swiping security view -->
+    <java-symbol type="bool" name="config_faceAuthOnlyOnSecurityView" />
+
     <!-- For dynamic default font styles -->
     <java-symbol type="string" name="config_bodyFontFamily" />
 
