--- a/packages/SystemUI/res/values/awaken_strings.xml
+++ b/packages/SystemUI/res/values/awaken_strings.xml
@@ -78,10 +78,11 @@
 
     <!-- Power Menu -->
     <string name="global_action_reboot">Restart</string>
-    <string name="global_action_reboot_more">Restart\u2026</string>
+    <string name="global_action_reboot_more">Advanced</string>
     <string name="global_action_reboot_sub">System</string>
     <string name="global_action_reboot_recovery">Recovery</string>
     <string name="global_action_reboot_bootloader">Bootloader</string>
+    <string name="global_action_reboot_systemui">SystemUI</string>
     <string name="global_action_settings">Settings</string>
 
     <!-- Screenshot QS tile -->
