--- a/packages/SystemUI/res/values/awaken_strings.xml
+++ b/packages/SystemUI/res/values/awaken_strings.xml
@@ -91,6 +91,9 @@
     <string name="quick_settings_monotoggle_tile_mono">Mono audio</string>
     <string name="quick_settings_monotoggle_tile_stereo">Stereo audio</string>
 
+    <!-- Name of the call strength status bar icon. -->
+    <string name="status_bar_call_strength">Call strength</string>
+
     <!-- Power Menu -->
     <string name="global_action_reboot">Restart</string>
     <string name="global_action_reboot_more">Advanced</string>
