--- a/core/res/res/values/awaken_strings.xml
+++ b/core/res/res/values/awaken_strings.xml
@@ -21,6 +21,9 @@
     <string name="url_copy_success">URL copied successfully</string>
     <string name="url_copy_failed">An error occured while uploading the log to Memochō</string>
 
+    <!-- Cycle through ringer modes -->
+    <string name="volume_dialog_ringer_guidance_normal">Calls and notifications will ring</string>
+
     <!-- Global actions -->
     <string name="reboot_to_bootloader_title">Reboot bootloader</string>
     <string name="reboot_to_bootloader_message">Rebooting to bootloader\u2026</string>
