SystemUI: Implement Bluetooth dialog
Based on Internet dialog code.

Change-Id: Iff63a49ff6a49c535b63a430bee8d7c55e78cbcc

--- a/packages/SystemUI/res/values/awaken_dimens.xml
+++ b/packages/SystemUI/res/values/awaken_dimens.xml
@@ -20,6 +20,9 @@
     <dimen name="navigation_home_handle_width_medium">130dp</dimen>
     <dimen name="navigation_home_handle_width_long">160dp</dimen>
 
+    <!-- Bluetooth dialog -->
+    <dimen name="bluetooth_dialog_active_device_bottom_margin">4dp</dimen>
+
     <!-- Fps info text -->
     <dimen name="fps_info_text_padding">4dp</dimen>
 
